# biome

./: Cargo.toml  justfile  knope.toml
crates/biome_parser/src/: event.rs  token_source.rs
crates/biome_r_factory/: Cargo.toml
crates/biome_r_factory/src/: generated.rs
crates/biome_r_formatter/: Cargo.toml
crates/biome_r_formatter/src/: context.rs  generated.rs  lib.rs  prelude.rs
crates/biome_r_formatter/src/r/any/: expression.rs  mod.rs  parameter.rs
crates/biome_r_formatter/src/r/auxiliary/: binary_expression.rs  double_value.rs  function_definition.rs  mod.rs  parameter.rs  parameters.rs  root.rs
crates/biome_r_formatter/src/r/bogus/: mod.rs
crates/biome_r_formatter/src/r/lists/: expression_list.rs  parameter_list.rs
crates/biome_r_formatter/tests/: language.rs  quick_test.rs  spec_test.rs
crates/biome_r_formatter/tests/specs/r/: comment.R.snap
crates/biome_r_parser/: Cargo.toml
crates/biome_r_parser/src/: lib.rs  options.rs  parse.rs  treesitter.rs
crates/biome_r_parser/src/lexer/: mod.rs
crates/biome_r_parser/tests/: spec_test.rs
crates/biome_r_parser/tests/snapshots/ok/: binary_expressions.R.snap  comments.R.snap  function_definition.R  function_definition.R.snap  function_definition.R.snap.new
crates/biome_r_syntax/: Cargo.toml
crates/biome_r_syntax/src/: file_source.rs  lib.rs
crates/biome_service/: Cargo.toml
crates/biome_service/src/: settings.rs
crates/biome_service/src/file_handlers/: mod.rs  r.rs
xtask/codegen/: r.ungram
xtask/codegen/src/: formatter.rs  language_kind.rs  lib.rs  r_kinds_src.rs
xtask/rules_check/src/: lib.rs
