[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's R parser"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_r_parser"
repository.workspace = true
version              = "0.1.0"

[dependencies]
biome_console       = { workspace = true }
biome_parser        = { workspace = true }
biome_r_factory     = { workspace = true }
biome_r_syntax      = { workspace = true }
biome_rowan         = { workspace = true }
biome_unicode_table = { workspace = true }
serde               = { workspace = true, features = ["derive"] }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tree-sitter         = { workspace = true }
tree-sitter-r       = { workspace = true }

[dev-dependencies]
biome_configuration = { path = "../biome_configuration" }
biome_deserialize   = { path = "../biome_deserialize" }
biome_diagnostics   = { workspace = true }
biome_fs            = { path = "../biome_fs" }
biome_service       = { path = "../biome_service" }
biome_test_utils    = { path = "../biome_test_utils" }
insta               = { workspace = true }
quickcheck          = { workspace = true }
quickcheck_macros   = { workspace = true }
tests_macros        = { workspace = true }

# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true

[lints]
workspace = true
